=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.21_01-dev

=item 1.21 - July 2, 1999

fix refcount bug in %VirtualHost [] values, thanks to Pete Ehlke for
the spot

get rid of a warning in Apache::test [Joshua Chamas <joshua@chamas.com>]

$r->read will now properly check the return value of
ap_setup_client_block() and return undef if != OK,
e.g. if LimitRequestBody is exceeded, thanks to Joshua Chamas for the
spot and testing

loosen module/cookie tests

fix bug in register_cleanup() [Chip Turner <chip@ZFx.com>]

added StatusLexInfo option to Apache::Status

=item 1.20 - June 11, 1999

turn off warnings in Apache::Status::as_HTML symdump code
[Geoffrey Young <younggs@acwilm.com>, Tim Bunce <Tim.Bunce@ig.co.uk>]

tweak Apache::RegistryNG so it works with virtual includes, thanks to
Vivek Khera for the spot

modules/eperl,embperl removed from 'make test'

change Apache::File->tmpfile flags from O_WRONLY to O_RDWR
[Chuck O'Donnell <cao@milf18.bus.net>]

fix Apache::RegistryBB when $r->filename NOT_FOUND 
[Frank D. Cringle <fdc@cliwe.ping.de>]

cygwin port [Stipe Tolj <tolj@uni-duesseldorf.de>]

Documented $r->pnotes [<ask@valueclick.com>]

Change "setting auth_name" trace message so we don't get it without
having enabled a MOD_PERL_TRACE level [Ask Bjoern Hansen
<ask@valueclick.com>]

s/class/pclass/g so we can compile w/ c++

mod_perl will now save/restore SIGALRM

fix Apache::Status bug prototype check of 'use constant' subs, thanks to
Eric Cholet for the spot

added set_byterange() and each_byterange() methods

added proper support for {Location,Directory,Files}Match in <Perl> sections

new Apache::ExtUtils::pm function to generate Foo.pm/Makefile.PL
templates for modules with directive handlers

Makefile.PL will now do a handful of sanity checks looking for
possible broken configurations and offer suggestions for those it
finds

rework PerlFreshRestart to avoid core dump triggered w/ 5.005_03
